--- a/sub/web1/css/main.css
+++ b/sub/web1/css/main.css
@@ -22,12 +22,35 @@ a {
     color: inherit;
 }
 .banner {
-    height: 95px;
-    width: 100%;
-    text-align: center;
-    line-height: 95px;
-    background-color: #eee;
+    margin: 0 auto;
+    display: flex;
 }
+.banner img {
+    display: block;
+}
+.banner .banner1 {
+    width: 50%;
+    height: 80px;
+    position: relative;
+    background-color: #ffd497;
+}
+.banner .banner1 img {
+    position: absolute;
+    right: 0;
+}
+.banner .banner2 {
+    width: 50%;
+    height: 80px;
+    position: relative;
+    background-color: #fff8e8;
+}
+.banner .banner2 img {
+    position: absolute;
+    left: 0;
+}
+
+
+
 header {
     width: 1280px;
     margin: 0 auto;
@@ -74,7 +97,7 @@ header .header_inner .util ul li a {}
 header .header_inner h1 {
     position: absolute;
     left: 0;
-    top: 60px;
+    bottom: 25px;
 
 }
 header .header_inner h1 img {
@@ -84,7 +107,7 @@ header .header_inner h1 img {
 header .header_inner .header_search {
     width: 1280px;
     position: absolute;
-    top: 60px;
+    bottom: 25px;
     text-align: center;
 
 }
@@ -98,17 +121,41 @@ header .header_inner .header_search input[type="text"] {
     font-weight: 500;
     background-color: rgba(238, 238, 238, 0.24);
 }
-
 header .header_inner .my_menu {
+    height: 45px;
+    display: flex;
+
 }
 header .header_inner .my_menu ul {
     display: flex;
     position: absolute;
     right: 0;
-    top: 60px;
+    bottom: 25px;
+    width: 170px;
+    height: 45px;
+    justify-content: space-between;
+    align-items: center;
 }
-header .header_inner .my_menu ul li {}
-header .header_inner .my_menu ul li a {}
+header .header_inner .my_menu ul li {
+    width: 45px;
+    height: 45px;
+
+}
+header .header_inner .my_menu ul a {
+    width: 45px;
+    height: 45px;
+    position: relative;
+
+}
+header .header_inner .my_menu ul img {
+    width: 25px;
+    height: 25px;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
 
 nav {
     font-size: 18px;
@@ -129,29 +176,56 @@ nav > ul {
 }
 
 nav > ul .all_category {
-    width: 200px;
-    height: 100%;
-    line-height: 70px;
+    width: 180px;
+    height: 100%;    
 }
 
 nav > ul .all_category > a {
     display: block;
-    width: 200px;
+    width: 180px;
+    line-height: 70px;
+    position: relative;
+}
+nav > ul .all_category > a::before {
+    content: url(../img/all_category_icon.png);
+    margin-right: 10px;
+}
+nav > ul .all_category > a::after {
+    content: '';
+    width: 1px;
+    height: 18px;
+    background-color: #ddd;
+    display: inline-block;
+    position: absolute;
+    left: 180px;
+    bottom: 25px;
+}
+nav > ul .all_category:hover > a::after {
+    background-color: transparent;
 }
 
 nav > ul .all_category:hover > a {
     background-color: #333;
     color: #fff;
 }
+nav > ul .all_category:hover > a::before {
+    content: url(../img/all_category_icon_hover.png);
+    margin-right: 10px;
+}
 nav > ul .all_category ul {}
+
 nav > ul .all_category ul li {
     font-size: 16px;
     font-weight: 300;
+    padding-left: 20px;
 }
 
 nav > ul .depth01 {
-    padding: 0 45px;
+    padding: 0 48.8px;
     line-height: 70px;
+}
+nav > ul .depth01:nth-of-type(8) {
+    padding: 0 0 0 45px;
 }
 
 
@@ -186,7 +260,7 @@ nav > ul .all_category .depth02 li a {
     display: block;
 }
 .section01 {
-    width: 1280px;
+
     margin: 120px auto 0;
 }
 .section01 h3 {
@@ -194,12 +268,29 @@ nav > ul .all_category .depth02 li a {
     font-weight: 700;
     width: 1280px;
     text-align: center;
+    margin: 0 auto;
 }
 .section01 .timer {
     width: 100%;
     margin: 20px auto 0;
     display: flex;
     justify-content: center;
+}
+.section01 .timer div {
+    display: flex;
+}
+.section01 .timer div::after {
+    content: ':';
+    color: #ff5e1e;
+    font-size: 50px;
+    font-weight: 900;
+    position: relative;
+    top: 20px;
+    left: -7px;
+
+}
+.section01 .timer div:nth-of-type(4):after {
+    display: none;
 }
 .section01 .timer p {
     font-size: 60px;
@@ -217,6 +308,7 @@ nav > ul .all_category .depth02 li a {
 .section01 .timer p:nth-of-type(2) {
     margin-right: 15px;
 }
+
 .section01 .timer p:nth-of-type(3) {
     margin-right: 4px;
 }
@@ -233,14 +325,70 @@ nav > ul .all_category .depth02 li a {
 .section01 .timer p:nth-of-type(7) {
     margin-right: 4px;
 }
+.section01 .all_list {
+    display: flex;
+    margin-top: 40px;
+    justify-content: space-between;
+}
+.section01 .all_list img {
+    display: block;
+}
+.section01 .all_list .item1 {
+    width: 292px;
+    height: 448px;
+}
+.section01 .all_list .item1 div {
+    width: 100%;
+    height: 148px;
+    border: 1px solid #ddd;
+    padding: 20px 0;
+}
+.section01 .all_list .item1 div dd {
+    font-size: 16px;
+    font-weight: 300;
+    letter-spacing: -1px;
+    margin-top: 23px;
+}
+.section01 .all_list .item5 {
+    width: 292px;
+    height: 448px;
+}
+.section01 .all_list .item5 div {
+    width: 100%;
+    height: 148px;
+    border: 1px solid #ddd;
+    padding: 20px 0 20px 20px;
+}
+.section01 .all_list .item5 div dl dt {
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+.section01 .all_list .item5 div dl dd {
+    font-size: 16px;
+    font-weight: 300;
+    letter-spacing: -1px;
+    margin-bottom: 25px;
+}
+.section01 .all_list .item5 div dl p:nth-of-type(1) {
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+.section01 .all_list .item5 div dl p:nth-of-type(2) {
+    font-weight: 700;
+    font-size: 18px;
+    color: #ff5e1e;
+}
 .section01 .list {
+    width: 1280px;
     display: flex;
     justify-content: space-between;
 }
 .section01 .item {
     width: 408px;
     height: 448px;
-    margin-top: 40px;
+
 }
 .section01 .item img {
     width: 100%;
@@ -377,9 +525,22 @@ nav > ul .all_category .depth02 li a {
 .section03 .top_category {
     display: flex;
 }
+
 .section03 .list01 {
     width: 408px;
     height: 540px;
+    position: relative;
+}
+.section03 .list01 > p {
+    position: absolute;
+    width: 55px;
+    height: 55px;
+    background-color: #ff5e1e;
+    color: #fff;
+    font-size: 40px;
+    text-align: center;
+    line-height: 55px;
+    font-weight: 900;
 }
 .section03 .list01 img {
     width: 408px;
@@ -397,6 +558,18 @@ nav > ul .all_category .depth02 li a {
     font-weight: 700;
     margin-top: 30px;
     margin-bottom: 5px;
+    position: relative;
+}
+.section03 .list01 div dl dt::after {
+    content: '';
+    margin-left: 5px;
+    display: inline-block;
+    background: url(../img/sec03_icon.png) no-repeat;
+    background-size: 90%;
+    width: 90px;
+    height: 18px;
+    position: absolute;
+    top: 3px;
 }
 .section03 .list01 div dl dd {
     font-size: 20px;
@@ -448,7 +621,18 @@ nav > ul .all_category .depth02 li a {
     display: flex;
     width: 436px;
     height: 270px;
-
+    position: relative;
+}
+.section03 .category01 .top_category .list2345 .box > p {
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    background-color: #ff5e1e;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 900;
+    text-align: center;
+    line-height: 35px;
 }
 .section03 .category01 .top_category .list2345 .box img {
     width: 218px;
@@ -469,7 +653,22 @@ nav > ul .all_category .depth02 li a {
     font-weight: 700;
     margin-bottom: 5px;
     margin-top: 52px;
+    position: relative;
 }
+.section03 .category01 .top_category .list2345 .box div dl dt::after {
+    content: '';
+    margin-left: 5px;
+    display: inline-block; 
+    background: url(../img/sec03_icon.png) no-repeat;
+    background-size: 70%;
+    width: 90px;
+    height: 18px;
+    position: absolute;
+    top: 3px;
+}
+
+
+
 .section03 .category01 .top_category .list2345 .box div dl dd {
     font-size: 16px;
     font-weight: 300;
@@ -501,4 +700,244 @@ nav > ul .all_category .depth02 li a {
     font-size: 14px;
     font-weight: 300;
     color: #777;
+}
+
+
+
+.section03 .category02 {
+    width: 1280px;
+    margin-bottom: 120px;
+}
+.section03 .category02 ul {
+    width: 1280px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+.section03 .category02 ul li {
+    padding: 0 22px;
+    height: 40px;
+    line-height: 40px;
+    background-color: #eee;
+    border-radius: 20px;
+}
+.section03 .category02 ul li:hover {
+    background-color: #ff5e1e;
+    color: #fff;
+}
+.section03 .category02 .list01 div dl .price p:nth-of-type(2) {
+    position: absolute;
+    bottom: 0;
+    left: 88px;
+    color: #777;
+    font-size: 16px;
+    font-weight: 300;
+}
+.section03 .category02 .top_category .list2345 {
+    width: 872px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.section03 .category02 .top_category .list2345 .box {
+    display: flex;
+    width: 436px;
+    height: 270px;
+    position: relative;
+}
+.section03 .category02 .top_category .list2345 .box > p {
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    background-color: #ff5e1e;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 900;
+    text-align: center;
+    line-height: 35px;
+}
+.section03 .category02 .top_category .list2345 .box img {
+    width: 218px;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+.section03 .category02 .top_category .list2345 .box div dl {
+    border: 1px solid #ddd;
+    width: 218px;
+    height: 270px;
+    padding-left: 30px;
+    word-break: keep-all;
+}
+
+.section03 .category02 .top_category .list2345 .box div dl dt {
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 5px;
+    margin-top: 52px;
+    position: relative;
+}
+.section03 .category02 .top_category .list2345 .box div dl dt:after {
+    content: '';
+    margin-left: 5px;
+    background: url(../img/sec03_icon.png) no-repeat;
+    background-size: 70%;
+    width: 90px;
+    height: 18px;
+    position: absolute;
+    top: 3px;
+}
+.section03 .category02 .top_category .list2345 .box div dl dd {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.3;
+    margin-bottom: 30px;
+}
+.section03 .category02 .top_category .list2345 .box div dl p:nth-of-type(1) {
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.section03 .category02 .top_category .list2345 .box div dl p:nth-of-type(2) {
+    font-size: 14px;
+    font-weight: 300;
+    margin-bottom: 10px;
+}
+.section03 .category02 .top_category .list2345 .box div dl .score {
+    display: flex;
+}
+.section03 .category02 .top_category .list2345 .box div dl .score p:nth-of-type(1) {
+    font-size: 14px;
+    color: #ff5e1e;
+}
+.section03 .category02 .top_category .list2345 .box div dl .score p:nth-of-type(2) {
+    font-size: 14px;
+    font-weight: 300;
+}
+.section03 .category02 .top_category .list2345 .box div dl .score p:nth-of-type(3) {
+    font-size: 14px;
+    font-weight: 300;
+    color: #777;
+}
+
+
+
+footer {
+    height: 285px;
+}
+footer .box .top {
+    height: 65px;
+    background-color: #eee;
+}
+footer .box .top ul {
+    width: 1280px;
+    margin: 0 auto;
+    display: flex;
+    position: relative;
+    height: 100%;
+    align-items: center;
+
+}
+footer .box .top ul li {
+    color: #777;
+    font-size: 15px;
+    margin-right: 50px;
+
+}
+
+footer .box .top ul li:last-of-type {
+    position: absolute;
+    right: 0;
+    margin-right: 0;
+}
+footer .box .top ul li::after {
+    content: '';
+    width: 1px;
+    height: 15px;
+    background-color: #777;
+    display: inline-block;
+    position: relative;
+    left: 25px;
+    top: 2px
+}
+footer .box .top ul li:nth-of-type(5)::after{
+    display: none;
+}
+footer .box .top ul li:nth-of-type(6)::after{
+    display: none;
+}
+
+
+footer .box .bottom {
+    width: 1280px;
+    margin: 0 auto;
+    height: 220px;
+    display: flex;
+}
+footer .box .bottom .box1 {
+    width: 190px;
+    height: 225px;
+    position: relative;
+}
+footer .box .bottom img {
+    width: 104px;
+    height: 42px;
+    position: absolute;
+    left: 0;
+    top: 45px;
+}
+footer .box .bottom .info {
+    width: 545px;
+    height: 100%;
+    margin-top: 45px;
+    line-height: 1.5;
+    font-size: 14px;
+    color: #777;
+    padding-right: 25px;
+
+}
+footer .box .bottom .info strong {
+    margin-bottom: 8px;
+    display: block;
+}
+footer .box .bottom .info p {
+    margin-bottom: 8px;
+}
+footer .box .bottom .info span {
+    text-decoration: underline;
+}
+footer .box .bottom .tel {
+    width: 545px;
+    height: 100%;
+    margin-top: 45px;
+    line-height: 1.5;
+    font-size: 14px;
+    color: #777;
+}
+footer .box .bottom .tel strong {
+    margin-bottom: 8px;
+    display: block;
+}
+footer .box .bottom .tel strong span {
+    color: #ff5e1e;
+}
+footer .box .bottom .tel .box2 {
+    width: 100%;
+    display: flex;
+    margin-bottom: 8px;
+}
+footer .box .bottom .tel .box2 p {
+    margin-right: 20px;
+}
+footer .box .bottom .tel ul {
+    display: flex;
+}
+footer .box .bottom .tel ul li {
+    width: 70px;
+    height: 26px;
+    border: 1px solid #ddd;
+    font-size: 12px;
+    text-align: center;
+    line-height: 22px;
+    margin-right: 10px;
 }
