--- a/css/main.css
+++ b/css/main.css
@@ -30,10 +30,223 @@ a {
     color: inherit;
 }
 
+
+/* common */
+.inner {
+    width: 1440px;
+    margin: 0 auto;
+}
+section .title {
+    margin-bottom: 40px;
+}
+section .title h3 {
+    font-size: 50px;
+}
+section .title p {
+    font-size: 20px;
+}
+
+
+/* header */
+header {}
+header .inner {
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header .inner h1 {
+    font-size: 20px;
+}
+header .inner h1 a {}
+header .inner nav {}
+header .inner nav ul {
+    display: flex;
+    font-size: 18px;
+}
+header .inner nav ul li {}
+header .inner nav ul li a {
+    padding-left: 100px;
+}
+
+
+/* .main_visual */
+.main_visual {
+    height: calc(100vh - 100px);
+    position: relative;
+}
+.main_visual img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.main_visual .inner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+}
+.main_visual .inner p {
+    color: rgba(255, 255, 255, 0.9);
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+.main_visual .inner h2 {
+    font-size: 70px;
+}
+
+
+/* .swiper */
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+/* .cont01 영상편집 */
+.cont01 {
+    padding: 200px 0;
+}
+.cont01 .motion_menu {
+    display: inline-block;
+}
+.cont01 .motion_menu ul {
+    display: flex;
+    margin-bottom: 20px;
+    background-color: #eee;
+    height: 40px;
+    align-items: center;
+    border-radius: 40px;
+}
+.cont01 .motion_menu ul li {
+    padding: 0 30px;
+    font-size: 14px;
+    cursor: pointer;
+}
+.cont01 .motion_menu ul li.on {
+    background-color: #333;
+    color: #fff;
+    height: 100%;
+    line-height: 40px;
+    border-radius: 40px;
+}
+
+.cont01 .mySwiper {
+    display: none;
+}
+.cont01 .mySwiper.on {
+    display: block;
+}
+
+.cont01 .mySwiper .item {
+    display: flex;
+    justify-content: space-between;
+}
+.cont01 .mySwiper .item .pc_youtube {
+    width: 55%;
+    position: relative;
+}
+.cont01 .mySwiper .item .pc_youtube img {
+    height: auto;
+}
+.cont01 .mySwiper .item .pc_youtube .youtube {
+    position: absolute;
+    top: 23px;
+    left: 26px;
+    width: 94%;
+}
+.cont01 .mySwiper .item .pc_youtube .youtube > div {
+    width: 100%;
+    padding-bottom: 56.25%;
+    position: relative;
+}
+.cont01 .mySwiper .item .pc_youtube .youtube > div iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.cont01 .mySwiper .item .info {
+    width: 45%;
+    text-align: left;
+    padding-left: 50px;
+}
+.cont01 .mySwiper .item .info > strong {
+    display: block;
+    margin-bottom: 20px;
+}
+.cont01 .mySwiper .item .info h4 {
+    font-size: 34px;
+}
+.cont01 .mySwiper .item .info p {
+    font-size: 20px;
+    border-top: 1px solid #ccc;
+    margin-top: 20px;
+    padding-top: 20px;
+    line-height: 1.4;
+}
+.cont01 .mySwiper .item .info .text {
+    margin: 20px 0 30px;
+}
+.cont01 .mySwiper .item .info .text li {
+    line-height: 1.6;
+}
+.cont01 .mySwiper .item .info .text li strong {}
+.cont01 .mySwiper .item .info .btn {
+    display: flex;
+}
+.cont01 .mySwiper .item .info .btn li {
+    background-color: #333;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 40px;
+    margin-right: 10px;
+    color: #fff;
+}
+.cont01 .mySwiper .item .info .btn li a {
+    padding: 0 25px;
+}
+.cont01 .mySwiper .item .info .btn li:nth-of-type(2) {
+    background-color: #fff;
+    color: #333;
+    border: 1px solid #ccc;
+}
+
+
 /* .cont03 웹사이트 */
 .cont03 {
-    width: calc(100% - 300px);
-    margin: 200px auto;
+    /* width: calc(100% - 300px);
+    margin: 200px auto; */
+    background-color: #eee;
+    padding: 200px 0;
 }
 .cont03 .list {
     height: 85vh;
@@ -106,5 +319,121 @@ a {
     display: block;
     line-height: 45px;
     font-size: 14px;
+}
 
+
+/* .cont04 그래픽디자인 */
+.cont04 {
+    background-color: #ccc;
+    padding: 200px 0;
+}
+.cont04 .title {
+    text-align: center;
+}
+.cont04 .list {
+    display: flex;
+    justify-content: space-between;
+}
+.cont04 .list a {
+    width: 19%;
+}
+.cont04 .list a img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    display: block;
+}
+.cont04 .list a .info {
+    background-color: #fff;
+    padding: 20px 10px;
+}
+.cont04 .list a .info h4 {
+    font-size: 20px;
+    margin-bottom: 7px;
+}
+.cont04 .list a .info p {}
+
+
+/* .cont05 나의소개 */
+.cont05 {
+    padding: 200px 0;
+}
+.cont05 .info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.cont05 .info .info_img {
+    width: 400px;
+    height: 400px;
+}
+.cont05 .info .info_img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.cont05 .info .text {
+    width: 1000px;
+    padding-left: 100px;
+}
+.cont05 .info .text ul {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.cont05 .info .text ul li {
+    line-height: 1.4;
+}
+.cont05 .info .text ul li strong {
+    display: inline-block;
+    width: 180px;
+}
+
+.cont05 .info .text .list {
+    margin-top: 50px;
+}
+.cont05 .info .text .list li {
+    height: 50px;
+    line-height: 50px;
+    padding: 0 30px;
+    background-color: #eee;
+    border-radius: 40px;
+    margin: 5px 10px;
+    font-size: 16px;
+}
+.cont05 .info .text .list li.v {
+    background-color: #333;
+    color: #fff;
+}
+
+
+/* .footer */
+footer {
+    padding: 70px 0;
+    background-color: #333;
+    color: rgba(255, 255, 255, 0.9);
+    text-align: center;
+}
+footer ul {
+    margin-bottom: 50px;
+}
+footer ul li {
+    height: 50px;
+    line-height: 50px;
+    width: 200px;
+    background-color: #ddd;
+    color: #333;
+    margin: 10px auto;
+    border-radius: 40px;
+}
+footer ul li a {
+    display: block;
+}
+footer p {
+    margin-bottom: 10px;
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.6);
+    line-height: 1.4;
 }
