--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,8 @@
     font-weight: normal;
     font-style: normal;
 }
+@import url(https://fonts.googleapis.com/earlyaccess/notosanskr.css);
+
 * {
     margin: 0;
     padding: 0;
@@ -20,7 +22,7 @@
 body {
     color: #333;
     line-height: 1;
-    font-family: 'S-CoreDream-2ExtraLight';
+    font-family: 'Noto Sans KR';
 }
 li {
     list-style: none;
